InstalledApp: show link to Google Play
Shows a Google Play store icon in the App Info actionbar of apps
Excludes aosp built ones, but still works for apps generally found in /system, like SuperSU
The openPlayStore() code was created by @nicholaschum for Substratum, thank you!

BenzoEdit: fixed it for pie and updated drawable
Change-Id: I279d4ab10477a69972fcbdb27877ccd0b15f951b

--- a/res/values/skyline_strings.xml
+++ b/res/values/skyline_strings.xml
@@ -29,4 +29,7 @@
     <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>
     <string name="display_cutout_force_fullscreen_no_apps">No apps</string>
     <string name="display_cutout_force_fullscreen_restart_app">Please restart the application to apply the changes.</string>
+
+    <!-- App details: open play store link if app is user installed -->
+    <string name="app_play_store">Google Play</string>
 </resources>
