--- a/res/values/skylineui_config.xml
+++ b/res/values/skylineui_config.xml
@@ -3,4 +3,7 @@
     <!-- xdUI Base Layout -->
     <color name="homepage_blaze_background">#536dfe</color>
     <color name="xd_background1">@android:color/system_neutral1_50</color>
+
+    <!-- Device specific doze package -->
+    <string name="config_customDozePackage" translatable="false"></string>
 </resources>
