--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -118,4 +118,8 @@
 
     <!-- SkylineUI categories -->
     <string name="icons_category">Icons</string>
+
+    <!-- Roaming indicator icon -->
+    <string name="roaming_indicator_icon_title">Roaming indicator</string>
+    <string name="roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
 </resources>
