Settings: Allow using 4G icon instead LTE [2/2]
Change-Id: Ib5ceb5537e2eff1450e9c80316d9e304b61225e5
Signed-off-by: Arghya Chanda <arghyac35@gmail.com>
Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -121,4 +121,11 @@
     <!-- Hardware info -->
     <string name="platform_revision">Platform</string>
     <string name="total_ram">Total RAM</string>
+
+    <!-- Show LTE/4G switch -->
+    <string name="show_fourg_icon_title">Show 4G instead of LTE</string>
+    <string name="show_fourg_icon_summary">Replace LTE indicator with 4G</string>
+
+    <!-- SkylineUI categories -->
+    <string name="icons_category">Icons</string>
 </resources>
