--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -101,4 +101,7 @@
     <!-- Ignore window secure -->
     <string name="ignore_window_secure_title">Ignore secure window flag</string>
     <string name="ignore_window_secure_summary">Remove screenshot and screenrecord limits for all apps. This can be convenient in some cases but may lead to privacy leaks.</string>
+
+    <!-- Battery temperature -->
+    <string name="battery_temp">Temperature</string>
 </resources>
