--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -18,4 +18,7 @@
     <!-- SkylineUI Maintainer -->
     <string name="SkylineUI_maintainer">Build made by</string>
 
+    <!-- Black theme for dark mode -->
+    <string name="black_bg_title">Pure black</string>
+    <string name="black_bg_summary">Pure black background for dark theme</string>
 </resources>
