--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -65,4 +65,8 @@
     <string name="linear_lightness_title">Use custom lightness scale</string>
     <string name="white_luminance_title">Brightness</string>
 
+   <!-- Black theme -->
+    <string name="system_black_theme_title">Vivid Colors</string>
+    <string name="system_black_theme_summary">Use colorful and darker monet shades</string>
+
 </resources>
