--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -93,4 +93,8 @@
     <!-- Fragment for hosting a selectable list of applications -->
     <string name="search">Search</string>
     <string name="search_apps">Search apps</string>
+
+    <!-- Notch: Full screen apps -->
+    <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
+    <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>
 </resources>
