Settings: allow customizing the length of gesture navbar [2/3]
Change-Id: I7217c5bcc7308ba17975646828cd3f95d08f92d8
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>
Signed-off-by: chiru2000 <chiranthangadi123@gmail.com>
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -73,4 +73,8 @@
     <string name="game_space_title">Game Space</string>
     <string name="game_space_summary">Enhance your gaming experience</string>
 
+    <!-- Navbar length -->
+    <string name="navbar_length">Gesture bar length</string>
+    <string name="short_label">Short</string>
+    <string name="long_label">Long</string>
 </resources>
