Settings: Introduce Immersive Navigation [2/3]
Based in Hide gesture navbar from Syberia project

Author: Anay Wadhera <awadhera@berkeley.edu>
Date:   Thu Dec 10 10:44:36 2020 -0800

    gestures: expect 0 for immersive nav if it is undefined

    Change-Id: I4ea072623d9c345d7328550d7b7f1c20bb381659

[ghostrider-reborn] minor tweaks

Change-Id: Ibb28ce05373dd42447f64b450ef934d4612fd5ee
Co-Authored-By: DennySPb <dennyspb@gmail.com>
Co-Authored-By: Víctor Santoja <victorsantoja@gmail.com>
Co-Authored-By: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -106,4 +106,9 @@
     <!-- Game Space -->
     <string name="game_space_title">Game Space</string>
     <string name="game_space_summary">Enhance your gaming experience</string>
+
+    <!-- Immersive Navigation -->
+    <string name="gesture_navbar_category_title">Navigation bar</string>
+    <string name="immersive_navigation_title">Immersive Navigation</string>
+    <string name="immersive_navigation_summary">Hide the gesture pill and navigation bar padding.</string>
 </resources>
