Settings: Double tap to trigger doze [2/2]
* Also adapt Add video to Double tap to trigger doze from Pie

Change-Id: Id98543542db937c6cc1f176cd55f6b02e472849d
Co-Authored-By: David Ramírez  <DavidYonatan9@hotmail.com>

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -126,4 +126,9 @@
     <!-- Data disabled icon -->
     <string name="data_disabled_icon_title">Show data disabled icon</string>
     <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
+
+    <!-- Doze on double tap -->
+    <string name="double_tap_title">Double tap</string>
+    <string name="doze_double_tap_title">Double tap to check phone</string>
+    <string name="doze_double_tap_summary">Pulse notifications by a double tap</string>
 </resources>
