--- a/res/values/skyline_strings.xml
+++ b/res/values/skyline_strings.xml
@@ -17,4 +17,10 @@
 
     <!-- SkylineUI Maintainer -->
     <string name="SkylineUI_maintainer">Device Maintainer</string>
+
+    <!-- reTicker -->
+    <string name="reticker_title">reTicker</string>
+    <string name="reticker_summary">Replace heads-up notification with slim and less invasive version of redesigned ticker</string>
+    <string name="reticker_colored_title">Use app colored background</string>
+    <string name="reticker_colored_summary">Replace reTicker background color using notification app main color</string>
 </resources>
