Settings: allow changing the length of gesture navbar [2/2]
* forward ported from 11, but incorporated fullscreen gesture settings as a dependency so that this preference will be disabled when pill is hidden.

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -77,4 +77,9 @@
     <string name="navbar_length">Gesture bar length</string>
     <string name="short_label">Short</string>
     <string name="long_label">Long</string>
+
+    <!-- Gesture navbar length -->
+    <string name="gesture_navbar_length_title">Pill length</string>
+    <string name="short_label">Short</string>
+    <string name="long_label">Long</string>
 </resources>
