--- a/res/xml/gesture_navigation_settings.xml
+++ b/res/xml/gesture_navigation_settings.xml
@@ -38,6 +38,14 @@
         android:summary="@string/show_navbar_gesture_bar_summary"
         android:defaultValue="true" />
 
+        <com.android.settings.widget.LabeledSeekBarPreference
+            android:key="gesture_navbar_length_preference"
+            android:title="@string/gesture_navbar_length_title"
+            android:max="2"
+            android:selectable="true"
+            settings:textStart="@string/short_label"
+            settings:textEnd="@string/long_label"/>
+
     <PreferenceCategory
         android:key="assistant_gesture_category"
         android:persistent="false"
