--- a/res/values/skyline_strings.xml
+++ b/res/values/skyline_strings.xml
@@ -14,4 +14,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- About device screen, SkylineUI Release Version -->
     <string name="skylineui_release_version">SkylineUI Release Version</string>
+
+    <!-- SkylineUI Maintainer -->
+    <string name="SkylineUI_maintainer">Device Maintainer</string>
 </resources>
