Settings: Added a fragment for hosting a selectable list of applications
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: Ifeb9cf9705fd9fee0ecb7455d0d8b7825280cdf1
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>

-----

Settings: Improve apps list fragment

* Use coroutines to asynchronously update list instead of blocking main thread.
* Also fixed checked items being cleared out / showing wrong checked items when searching

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: I4c4e3c444bc0676ba5f8caaf75767b41be2aa60e

-----

Settings: Show a loading progress for apps list

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: Id475643f5d51d42be37edb799ce0387a80bced70
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/res/values/skylineui_dimens.xml
+++ b/res/values/skylineui_dimens.xml
@@ -21,4 +21,7 @@
      <dimen name="xd_toolbar_height">145dp</dimen>
      <dimen name="xd_toolbar_expanded_title_margin_start">21dp</dimen>
      <dimen name="xd_toolbar_expanded_title_margin_end">65dp</dimen>
+
+    <!-- Applications fragment -->
+    <dimen name="default_margin">16dp</dimen>
 </resources>
