--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -31,4 +31,7 @@
     <string name="hidden_apps_title">Hidden apps</string>
     <string name="hidden_apps_summary">Applications that should be hidden from launcher. Requires a launcher restart for changes to take effect</string>
 
+    <!-- Fragment for hosting a selectable list of applications -->
+    <string name="search">Search</string>
+    <string name="search_apps">Search apps</string>
 </resources>
