Settings: Improve gesture bar length [2/2]
Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>
Co-Authored-By: David Ramírez <DavidYonatan9@hotmail.com>

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -84,7 +84,7 @@
 
     <!-- Gesture navbar length -->
     <string name="gesture_navbar_length_title">Pill length</string>
-    <string name="short_label">Short</string>
+    <string name="hide_label">Hidden</string>
     <string name="long_label">Long</string>
 
     <!-- Gesture navbar radius -->
