--- a/res/xml/gesture_navigation_settings.xml
+++ b/res/xml/gesture_navigation_settings.xml
@@ -29,12 +29,15 @@
         android:summary="@string/show_navbar_gesture_bar_summary"
         android:defaultValue="true" />
 
+    <PreferenceCategory
+        android:title="@string/navbar_category">
+
         <com.android.settings.widget.LabeledSeekBarPreference
             android:key="gesture_navbar_length_preference"
             android:title="@string/gesture_navbar_length_title"
-            android:max="2"
+            android:max="3"
             android:selectable="true"
-            settings:textStart="@string/short_label"
+            settings:textStart="@string/hide_label"
             settings:textEnd="@string/long_label"/>
 
         <com.android.settings.widget.LabeledSeekBarPreference
