Settings: Make colored Statusbar Icons optional [2/2]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Co-Authored-By: David Ramirez  <DavidYonatan9@hotmail.com>
Co-Authored-By: Fikri <93211446+fiirefly24@users.noreply.github.com>

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -76,4 +76,8 @@
     <string name="gesture_navbar_category_title">Navigation bar</string>
     <string name="immersive_navigation_title">Immersive Navigation</string>
     <string name="immersive_navigation_summary">Hide the gesture pill and navigation bar padding.</string>
+
+    <!-- Statusbar colored icons -->
+    <string name="statusbar_colored_icons_title">Colored icons</string>
+    <string name="statusbar_colored_icons_summary">Use proper app icons for notification icons in status bar</string>
 </resources>
