--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -119,4 +119,8 @@
     <!-- Lock screen battery info indicator  -->
     <string name="lockscreen_battery_info_title">Lock screen charging info</string>
     <string name="lockscreen_battery_info_summary">Display negotiated charger max current and voltage, and battery temperature on lock screen while charging</string>
+
+    <!-- Privacy indicators -->
+    <string name="mic_camera_privacy_indicator_title">Mic and camera privacy indicator</string>
+    <string name="mic_camera_privacy_indicator_summary">Show separate indicator when an any app uses mic or camera</string>
 </resources>
