--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -30,6 +30,12 @@
             android:title="@string/statusbar_colored_icons_title"
             android:summary="@string/statusbar_colored_icons_summary"
             android:defaultValue="false" />
+
+        <com.android.settings.custom.preference.SecureSettingSwitchPreference
+        android:key="enable_camera_privacy_indicator"
+        android:title="@string/mic_camera_privacy_indicator_title"
+        android:summary="@string/mic_camera_privacy_indicator_summary"
+        android:defaultValue="true" />
     </PreferenceCategory>
 
     <com.android.settings.custom.preference.SystemSettingSwitchPreference
