Settings: Improve force fullscreen settings fragment
* Inspired from https://github.com/AOSP-Krypton/packages_apps_GamingMode, giving authorship.
* Adapted by [cjh1249131356]

[ghostrider-reborn: misc fixes]

Co-authored-by: cjh1249131356 <cjh1249131356@gmail.com>
Co-authored-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Change-Id: I1cd585940af46f6b08216b61ee69d5bb8f2441ce

Update skylineui_strings.xml

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -97,4 +97,8 @@
     <!-- Notch: Full screen apps -->
     <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
     <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>
+
+    <!-- Ignore window secure -->
+    <string name="ignore_window_secure_title">Ignore secure window flag</string>
+    <string name="ignore_window_secure_summary">Remove screenshot and screenrecord limits for all apps. This can be convenient in some cases but may lead to privacy leaks.</string>
 </resources>
