--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -107,4 +107,8 @@
 
     <!-- Text shown for the title of the restart systemui option -->
     <string name="power_menu_restart_systemui_title">Restart SystemUI</string>
+
+	<!-- Doze on charge -->
+    <string name="doze_on_charge_title">Always on when charging</string>
+    <string name="doze_on_charge_summary">Show doze screen all the time when charging</string>
 </resources>
