--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -45,4 +45,8 @@
 
     <!-- Battery temperature -->
     <string name="battery_temp">Temperature</string>
+
+	<!-- Doze on charge -->
+    <string name="doze_on_charge_title">Always on when charging</string>
+    <string name="doze_on_charge_summary">Show doze screen all the time when charging</string>
 </resources>
