Blissify: allow toggling location privacy indicator[2/2]
Change-Id: I3697bb0b51858076121ac81c00208462d9689b58

--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -36,6 +36,12 @@
         android:title="@string/mic_camera_privacy_indicator_title"
         android:summary="@string/mic_camera_privacy_indicator_summary"
         android:defaultValue="true" />
+
+        <com.android.settings.custom.preference.SecureSettingSwitchPreference
+            android:key="enable_location_privacy_indicator"
+            android:title="@string/location_privacy_indicator_title"
+            android:summary="@string/location_privacy_indicator_summary"
+            android:defaultValue="false" />
     </PreferenceCategory>
 
     <com.android.settings.custom.preference.SystemSettingSwitchPreference
