Settings: allow hiding apps from launcher [2/2]
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: I9fedc1503c5ad357960b4b07936a1ec66d82343e

-----

Settings: Allow hiding system apps that appear in launcher

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: Iacccc27507d0f9c2eac9e45966fa3f7c3f595905
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -26,4 +26,9 @@
     <!-- Statusbar colored icons -->
     <string name="statusbar_colored_icons_title">Colored icons</string>
     <string name="statusbar_colored_icons_summary">Use proper app icons for notification icons in status bar</string>
+
+    <!-- Hidden apps -->
+    <string name="hidden_apps_title">Hidden apps</string>
+    <string name="hidden_apps_summary">Applications that should be hidden from launcher. Requires a launcher restart for changes to take effect</string>
+
 </resources>
