--- a/res/xml/skylineui_lab_settings.xml
+++ b/res/xml/skylineui_lab_settings.xml
@@ -32,4 +32,11 @@
             android:persistent="false"
             android:fragment="com.android.settings.display.HiddenAppSettingsFragment" />
 
+        <!-- Ignore secure window -->
+    <com.android.settings.custom.preference.SecureSettingSwitchPreference
+        android:key="window_ignore_secure"
+        android:title="@string/ignore_window_secure_title"
+        android:summary="@string/ignore_window_secure_summary"
+        android:defaultValue="false"/>
+
 </PreferenceScreen>
