Settings: Add SkylineUI Version to Firmware version window
SkylineUI: Add our logo to about phone section

--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -21,6 +21,21 @@
     android:title="@string/firmware_version"
     settings:keywords="@string/keywords_android_version">
 
+    <!-- SkylineUI logo -->
+    <com.android.settingslib.widget.LayoutPreference
+        android:key="skylineui_logo"
+        android:layout="@layout/skylineui_logo"
+        android:selectable="false"/>
+
+    <!-- SkylineUI version -->
+    <Preference
+        android:key="skylineui_release_version"
+        android:title="@string/skylineui_release_version"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="true"
+        settings:searchable="false"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.SkylineUIVersionDetailPreferenceController"/>
+
     <!-- Android version -->
     <Preference
         android:key="os_firmware_version"
