Settings: Lockscreen Charging (3/3)
based on:

[1/2] Settings: show more battery info on lockscreen when charging by yank555-lu

Co-Authored-By: yank555-lu <yank555.lu@gmail.com>

--- a/res/xml/screen_lock_settings.xml
+++ b/res/xml/screen_lock_settings.xml
@@ -54,4 +54,10 @@
         android:title="@string/unlock_scramble_pin_layout_title"
         android:summary="@string/unlock_scramble_pin_layout_summary" />
 
+    <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        android:key="lockscreen_battery_info"
+        android:title="@string/lockscreen_battery_info_title"
+        android:summary="@string/lockscreen_battery_info_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
