Settings: Add GameSpace support
Change-Id: Ie0d295ab1ca8080807e929ab9bc6d98f33c32d70
Co-Authored-By: alanndz <alanndz7@gmail.com>
Co-Authored-By: SagarMakhar <sagarmakhar@gmail.com>

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -102,4 +102,8 @@
 
     <!-- Fullscreen gestures -->
     <string name="navbar_category">Navigation bar</string>
+
+    <!-- Game Space -->
+    <string name="game_space_title">Game Space</string>
+    <string name="game_space_summary">Enhance your gaming experience</string>
 </resources>
