Settings: Add Game Space support
Co-authored-by: alanndz <alanndz7@gmail.com>
Change-Id: Ie0d295ab1ca8080807e929ab9bc6d98f33c32d70

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -67,4 +67,8 @@
     <string name="gesture_navbar_length_title">Pill length</string>
     <string name="short_label">Short</string>
     <string name="long_label">Long</string>
+
+    <!-- Game Space -->
+    <string name="game_space_title">Game Space</string>
+    <string name="game_space_summary">Enhance your gaming experience</string>
 </resources>
