Settings: Add Game Space support
Co-authored-by: alanndz <alanndz7@gmail.com>
Change-Id: I5df5d4cbd6a12f464b7768e73e7606bf378e7b3c

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -69,4 +69,8 @@
     <string name="system_black_theme_title">Vivid Colors</string>
     <string name="system_black_theme_summary">Use colorful and darker monet shades</string>
 
+   <!-- Game Space -->
+    <string name="game_space_title">Game Space</string>
+    <string name="game_space_summary">Enhance your gaming experience</string>
+
 </resources>
