Settings: support per-app volume [3/3]
Change-Id: I2ae4ca82cdd41474de2832e93704ffe19c5b2c77

--- a/res/values/skyline_strings.xml
+++ b/res/values/skyline_strings.xml
@@ -32,4 +32,9 @@
 
     <!-- App details: open play store link if app is user installed -->
     <string name="app_play_store">Google Play</string>
+    
+    <!-- Per-app volume control -->
+    <string name="app_volume">App volume</string>
+    <string name="app_volume_title">Per-app volume control</string>
+    <string name="app_volume_summary">Allow to set different volume levels for each app</string>
 </resources>
