--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -77,4 +77,8 @@
     <string name="pattern_da_da" translatable="false">da-da</string>
     <string name="pattern_da_da_dzzz" translatable="false">da-da-dzzz</string>
     <string name="pattern_da_dzzz_da" translatable="false">da-dzzz-da</string>
+
+    <!-- Power menu on lockscreen -->
+    <string name="power_menu_hide_on_secure_title">Hide power menu on lock screen</string>
+    <string name="power_menu_hide_on_secure_summary">Hide the power menu while on a secure lock screen</string>
 </resources>
