display: Add custom screen resolution setting
Rewrite the screen resolution setting based on
Iac1f65ab09717ea55a5b471e094385c77ba894ee

The original resolution switcher has the following shortcomings:
  1. It only contains two options: FHD and QHD.
  2. When it checks for supported resolutions, it only checks the
     widths (1080 for FHD and 1440 for QHD). So it cannot handle widths
     other than those predefined (and hardcoded) values.
  3. The original implementation only saves the original dpi index, and
     restores the index after resolution change. However, only saving
     dpi setting index does not necessarily keep display size when
     resolution changes.

This patch re-implements the screen resolution setting. When set up, it
detects all available resolutions *under current screen refresh rate*
and display all of them as available options.

Then when user sets a new display resolution, it will set up an observer
just as the original implementation, but instead of saving the dpi
setting index, it will use the following formula to calculate the best
suited dpi setting:

  Based on: "px = C1 * (dpi / C2)" where C1 and C2 are constants [1]
  We have:  "dpi_new = dpi_old * px_new / px_old"

And the observer will find an index that sets the dpi closest to the
`dpi_new` value calculated before. By doing that the display size will
not change a lot across screen resolution changes.

The custom resolution switcher will be enabled if
config_show_custom_screen_resolution_switch is set to true. And the
original implementation will be disabled.

[1]: The actual formula is "px = dp * (dpi / 160)"
     ref: https://developer.android.com/training/multiscreen/screendensities

Change-Id: I952a237abab0167181976f5e30b54badb05f5ffc
Signed-off-by: AnierinB <anierin@evolution-x.org>

--- a/res/values/skylineui_config.xml
+++ b/res/values/skylineui_config.xml
@@ -3,4 +3,7 @@
     <!-- xdUI Base Layout -->
     <color name="homepage_blaze_background">#536dfe</color>
     <color name="xd_background1">@android:color/system_neutral1_50</color>
+
+    <!-- Whether to show custom screen resolution settings -->
+    <bool name="config_show_custom_screen_resolution_switch">true</bool>
 </resources>
