Settings: Import Wi-Fi standard icon [2/2]
* Show Wi-Fi 4/5/6 standard on statusbar

Co-authored-by: Col_or <col_or@qq.com>
Co-authored-by: Kujou Yuko <i@779.moe>
Change-Id: I3658cda5b303bd03cf83e174e4dfd6a55d33e860

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -49,4 +49,8 @@
 	<!-- Doze on charge -->
     <string name="doze_on_charge_title">Always on when charging</string>
     <string name="doze_on_charge_summary">Show doze screen all the time when charging</string>
+
+    <!-- Wi-Fi Standard icon -->
+    <string name="show_wifi_standard_icon_title">Show Wi-Fi type icon</string>
+    <string name="show_wifi_standard_icon_summary">Show Wi-Fi type in Wi-Fi signal indicator</string>
 </resources>
