Settings: Move Theming to settings homepage
* cherry-picked from https://github.com/PixysOS/packages_apps_Settings@8eab284f12401acbd4f8b64d8a17775e41f7163e

Change-Id: Iee80b3cb415313ed25d3da66002cc6a9ed1cc5fa
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -79,6 +79,15 @@
         settings:controller="com.android.settings.deviceinfo.TopLevelStoragePreferenceController"/>
 
     <com.android.settings.widget.HomepagePreference
+        android:key="theme_customization_summary"
+        android:title="@string/theme_customization_category"
+        android:summary="@string/theme_customization_summary"
+        android:icon="@drawable/ic_settings_themes"
+        android:fragment="com.skylineui.settings.theme.ThemeSettings"
+        settings:controller="com.skylineui.settings.theme.ThemeSettingsPreferenceController"
+        android:order="-92"/>        
+
+    <com.android.settings.widget.HomepagePreference
         android:fragment="com.android.settings.notification.SoundSettings"
         android:icon="@drawable/ic_volume_up_24dp"
         android:key="top_level_sound"
