--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -18,4 +18,8 @@
     <!-- SkylineUI Maintainer -->
     <string name="SkylineUI_maintainer">Maintainer</string>
 
+    <!-- SkylineUI Workstation -->
+    <string name="skylineui_lab_title">SkylineUI Lab</string>
+    <string name="skylineui_lab_footer">At the moment the options have no sections :c</string>
+    <string name="skylineui_lab_summary">Personalizations / Features</string>
 </resources>
