--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -80,4 +80,9 @@
     <!-- Statusbar colored icons -->
     <string name="statusbar_colored_icons_title">Colored icons</string>
     <string name="statusbar_colored_icons_summary">Use proper app icons for notification icons in status bar</string>
+
+    <!-- SkylineUI Workstation -->
+    <string name="skylineui_lab_title">SkylineUI Workstation</string>
+    <string name="skylineui_lab_footer">Warning: These features are experimental and may have risks. Use them with caution.</string>
+    <string name="skylineui_lab_summary">Experimental features</string>
 </resources>
