Settings: Add SkylineUI Workstation
* inspired from project kaleidoscope
* Thanks PixysOS

Change-Id: I330566091da77857e34753c7a616259135b6561b
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/res/values/skylineui_strings.xml
+++ b/res/values/skylineui_strings.xml
@@ -18,4 +18,8 @@
     <!-- SkylineUI Maintainer -->
     <string name="SkylineUI_maintainer">Maintainer</string>
 
+    <!-- SkylineUI Workstation -->
+    <string name="skylineui_lab_title">SkylineUI Lab</string>
+    <string name="skylineui_lab_footer">At your own risk if you use spoof</string>
+    <string name="skylineui_lab_summary">Features</string>
 </resources>
