--- a/res/xml/skylineui_lab_settings.xml
+++ b/res/xml/skylineui_lab_settings.xml
@@ -23,4 +23,13 @@
         android:title="@string/skylineui_lab_footer"
         android:selectable="false"
         settings:searchable="false"/>
+
+        <!-- Hidden apps -->
+        <Preference
+            android:key="hidden_apps"
+            android:title="@string/hidden_apps_title"
+            android:summary="@string/hidden_apps_summary"
+            android:persistent="false"
+            android:fragment="com.android.settings.display.HiddenAppSettingsFragment" />
+
 </PreferenceScreen>
